Version 0.47.1 (07 July 2014)

  * fix for 'update -v' not displaying version info

Version 0.47.0 (07 July 2014)

  * bug fix for OS package removal in non-chroot environment
  * use autoconf for package versioning - note: running 'configure' is not required 
    for external usage
  * added support for OS package additions under SLES using zypper package management

Version 0.46.0 (17 June 2014)

  * addition of chroot support for package and file management
  * losf add/del node support added for Warewulf
  * allow recursive calling of losf command within parent 
  * initconfig utility now supports optional directory to use as a template config
  * allow non-interactive option for addalias command
  * inclusion of .spec file to support RPM packaging
  * bug fix for config_latest_install utility when config_dir is not defined

Version 0.45.0 (25 April 2014)

  * typo/grammar edits in INSTALL directions
  * addition of simple upgrade utility to help configure LosF after downloading
    an updated release tarball.  Running "misc/config_latest_install" will update
    a top-level losf soft link to point at the downloaded version, and will
    update the config/config_dir setting based on previously installed
    configurations.

Version 0.44.1 (23 April 2014)

  * bug fix for sync_config_file failure introduced after addition of koomie_cf -n option

Version 0.44.0 (13 April 2014)

  * new option for koomie_cf: use -n <node_type> to run parallel commands
    across a pre-defined LosF node-type
  * example kickstart files for use with LosF included in top-level kickstarts/
    directory along with Cobbler snippets in corresponding snippets/ directory
  * added --noprovision option to losf add; allows addition without
    normal provisioning definition requirements (convenient for switches, BMCs, etc.)
  * enhancement to allow for node-type specific config file syncing control
  * fixed missing final update notification when file ownership/permissions changed